--- a/index.html
+++ b/index.html
@@ -4,104 +4,150 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <base href="http://127.0.0.1:5500/public/">
+  <!-- <base href="http://127.0.0.1:5500/public/"> --> <!-- For DEV -->
+  <base href="https://wallas938.github.io/myteam-multi-page-website/public/">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Livvic:wght@500;600;700&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32x32.png">
+  <link rel="stylesheet" href="css/header.css">
   <link rel="stylesheet" href="css/styles.css">
   <title>Frontend Mentor | myteam website challenge - Homepage</title>
 </head>
 
 <body>
-
   <header>
     <nav>
       <ul>
-        <li>
-          <a>
+        <li class="logo">
+          <a href="#">
             <img src="assets/logo.svg" alt="logo">
           </a>
         </li>
-        <li>home</li>
-        <li>about</li>
-        <li>
+        <li class="hide-for-mobile home"><a href="#">home</a></li>
+        <li class="hide-for-mobile about"><a href="#">about</a></li>
+        <li class="hide-for-mobile contact-us">
           <button>contact us</button>
         </li>
-        <li><img src="assets/icon-hamburger.svg" alt="logo"></li>
+        <li class="hide-for-tablet-and-desktop icon-humberger">
+          <img src="assets/icon-hamburger.svg" alt="humberger icon">
+        </li>
       </ul>
-
-
     </nav>
   </header>
-  
 
-  
+  <section id="hero">
+    <img class="bg-pattern-1 hide-for-mobile hide-for-tablet" src="assets/bg-pattern-home-1.svg"
+      alt="a big black circle">
+    <img class="bg-pattern-2" src="assets/bg-pattern-home-2.svg" alt="two circles">
+    <div class="hero__container container">
+      <h1>Find the best <span class="talent">talent</span></h1>
+      <p>Finding the right people and building high performing teams can
+        be hard. Most companies aren’t tapping into the abundance of global
+        talent. We’re about to change that.
+      </p>
+    </div>
+  </section>
 
+  <section id="features">
+    <img class="bg-pattern-3" src="assets/bg-pattern-home-3.svg" alt="a pattern in the baground">
+    <div class="features__container container">
+      <h1>Build & manage distributed teams like no one else.</h1>
+      <div class="feature-list">
+        <div class="feature">
+          <img src="assets/icon-person.svg" alt="icon of a person">
+          <div>
+            <h3>Experienced Individuals</h3>
+            <p>Our network is made up of highly experienced professionals who are
+              passionate about what they do.</p>
+          </div>
+        </div>
+        <div class="feature">
+          <img src="assets/icon-cog.svg" alt="icon of a cog">
+          <div>
+            <h3>Easy to Implement</h3>
+            <p>Our processes have been refined over years of implementation meaning
+              our teams always deliver.</p>
+          </div>
+        </div>
+        <div class="feature">
+          <img src="assets/icon-chart.svg" alt="" srcset="">
+          <div>
+            <h3>Enhanced Productivity</h3>
+            <p>Our customized platform with in-built analytics helps you manage your
+              distributed teams.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
+  <section id="stories">
+    <img class="bg-square" src="assets/bg-pattern-home-4-about-3.svg" alt="a square pattern" srcset="">
+    <img class="bg-circle" src="assets/bg-pattern-home-5.svg" alt="" srcset="a circle pattern">
+    <div class="container stories__container">
+      <h2>Delivering real results for top companies. Some of our <span class="succes">success stories.</span></h2>
+      <div class="stories-list">
+        <div class="story">
+          <img class="icon-quotes" src="assets/icon-quotes.svg" alt="an image of quote">
+          <p class="testimonial">“The team perfectly fit the specialized skill set required. They focused
+            on the most essential features helping us launch the platform eight months
+            faster than planned.”</p>
+          <p class="name">Kady Baker</p>
+          <p class="position">Product Manager at Bookmark</p>
+          <img src="assets/avatar-kady.jpg" alt="picture of a woman">
+        </div>
+        <div class="story">
+          <img class="icon-quotes" src="assets/icon-quotes.svg" alt="an image of quote">
+          <p class="testimonial">“We needed to automate our entire onboarding process. The team came in and
+            built out the whole journey. Since going live, user retention has gone
+            through the roof!”</p>
+          <p class="name">Aiysha Reese</p>
+          <p class="position">Founder of Manage</p>
+          <img src="assets/avatar-aiysha.jpg" alt="picture of a woman">
+        </div>
+        <div class="story">
+          <img class="icon-quotes" src="assets/icon-quotes.svg" alt="an image of quote">
+          <p class="testimonial">“Amazing. Our team helped us build an app that delivered a new experience for
+            hiring a physio. The launch was an instant success with 100k downloads in the
+            first month.”</p>
+          <p class="name">Arthur Clarke</p>
+          <p class="position">Co-founder of MyPhysio</p>
+          <img src="assets/avatar-arthur.jpg" alt="picture of a man" srcset="">
+        </div>
+      </div>
+    </div>
+  </section>
 
-  Find the best talent
+  <section id="contact">
+    <img class="bg-pattern-6" src="assets/bg-pattern-home-6-about-5.svg" alt="a pattern of a circle">
+    <div class="container contact__container">
+      <h2>Ready to get started?</h2>
+      <button>contact us</button>
+    </div>
+  </section>
 
-  Finding the right people and building high performing teams can
-  be hard. Most companies aren’t tapping into the abundance of global
-  talent. We’re about to change that.
-
-
-
-  Build & manage distributed teams like no one else.
-
-  Experienced Individuals
-  Our network is made up of highly experienced professionals who are
-  passionate about what they do.
-
-  Easy to Implement
-  Our processes have been refined over years of implementation meaning
-  our teams always deliver.
-
-  Enhanced Productivity
-  Our customized platform with in-built analytics helps you manage your
-  distributed teams.
-
-
-
-  Delivering real results for top companies. Some of our success stories.
-
-  “The team perfectly fit the specialized skill set required. They focused
-  on the most essential features helping us launch the platform eight months
-  faster than planned.”
-  Kady Baker
-  Product Manager at Bookmark
-
-  “We needed to automate our entire onboarding process. The team came in and
-  built out the whole journey. Since going live, user retention has gone
-  through the roof!”
-  Aiysha Reese
-  Founder of Manage
-
-  “Amazing. Our team helped us build an app that delivered a new experience for
-  hiring a physio. The launch was an instant success with 100k downloads in the
-  first month.”
-  Arthur Clarke
-  Co-founder of MyPhysio
-
-
-
-  Ready to get started?
-
-  contact us
-
-
-
-  home
-  about
-
-  987 Hillcrest Lane
-  Irvine, CA
-  California 92714
-  Call Us : 949-833-7432
-
-  Copyright 2020. All Rights Reserved
-
+  <footer>
+    <div class="footer__container">
+      <img src="assets/logo.svg" alt="the site logo">
+      <ul class="links">
+        <li class="link">home</li>
+        <li class="link">about</li>
+      </ul>
+      <address>
+        <p>987 Hillcrest Lane</p>
+        <p>Irvine, CA</p>
+        <p>California 92714</p>
+        <p>Call Us : 949-833-7432</p>
+      </address>
+      <div class="socials">
+        <img src="assets/icon-facebook.svg" alt="facebook">
+        <img src="assets/icon-pinterest.svg" alt="pinterest">
+        <img src="assets/icon-twitter.svg" alt="twitter">
+      </div>
+      <p class="copyright">Copyright 2020. All Rights Reserved</p>
+    </div>
+  </footer>
 </body>
 
 </html>
