about page finished

--- a/public/about.html
+++ b/public/about.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- <base href="http://127.0.0.1:5500/public/"> --> <!-- For DEV -->
-  <base href="https://wallas938.github.io/myteam-multi-page-website/public/">
+  <base href="http://127.0.0.1:5500/public/"> <!-- For DEV -->
+  <!-- <base href="https://wallas938.github.io/myteam-multi-page-website/public/"> -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Livvic:wght@500;600;700&display=swap" rel="stylesheet">
@@ -26,8 +26,8 @@
             <img src="assets/logo.svg" alt="logo">
           </a>
         </li>
-        <li class="hide-for-mobile home"><a href="index.html">home</a></li>
-        <li class="hide-for-mobile about"><a href="about.html">about</a></li>
+        <li class="hide-for-mobile home"><a href="#">home</a></li>
+        <li class="hide-for-mobile about"><a href="#">about</a></li>
         <li class="hide-for-mobile contact-us">
           <button>contact us</button>
         </li>
