--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Livvic:wght@500;600;700&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32x32.png">
   <link rel="stylesheet" href="css/header.css">
-  <link rel="stylesheet" href="css/get-started.css">
+  <link rel="stylesheet" href="css/get-started.css" defer>
   <link rel="stylesheet" href="css/footer.css">
   <link rel="stylesheet" href="css/styles.css">
   <title>Frontend Mentor | myteam website challenge - About</title>
@@ -199,27 +199,7 @@
   Call Us : 949-833-7432
 
   Copyright 2020. All Rights Reserved -->
-  <!--   <footer>
-    <div class="footer__container">
-      <img src="assets/logo.svg" alt="the site logo">
-      <ul class="links">
-        <li class="link">home</li>
-        <li class="link">about</li>
-      </ul>
-      <address>
-        <p>987 Hillcrest Lane</p>
-        <p>Irvine, CA</p>
-        <p>California 92714</p>
-        <p>Call Us : 949-833-7432</p>
-      </address>
-      <div class="socials">
-        <img src="assets/icon-facebook.svg" alt="facebook">
-        <img src="assets/icon-pinterest.svg" alt="pinterest">
-        <img src="assets/icon-twitter.svg" alt="twitter">
-      </div>
-      <p class="copyright">Copyright 2020. All Rights Reserved</p>
-    </div>
-  </footer> -->
+  <script src="scripts/script.js" defer> </script>
 </body>
 
 </html>
