--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@
       <p class="copyright">Copyright 2020. All Rights Reserved</p>
     </div>
   </footer>
+  <script src="scripts/script.js" defer> </script>
 </body>
 
 </html>
