contact page OP on mobile tablet and desktop devices

--- a/public/about.html
+++ b/public/about.html
@@ -29,7 +29,7 @@
         <li class="hide-for-mobile home"><a href="#">home</a></li>
         <li class="hide-for-mobile about"><a href="#">about</a></li>
         <li class="hide-for-mobile contact-us">
-          <button>contact us</button>
+          <a href="contact.html"><button>contact us</button></a>
         </li>
         <li class="hide-for-tablet-and-desktop icon-humberger">
           <img src="assets/icon-hamburger.svg" alt="humberger icon">
