--- a/public/about.html
+++ b/public/about.html
@@ -10,6 +10,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Livvic:wght@500;600;700&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32x32.png">
+  <link rel="stylesheet" href="css/menu.css">
   <link rel="stylesheet" href="css/header.css">
   <link rel="stylesheet" href="css/get-started.css">
   <link rel="stylesheet" href="css/footer.css">
@@ -18,6 +19,20 @@
 </head>
 
 <body>
+  <div class="hide-for-tablet-and-desktop modals-backdrop hide"></div>
+  <div class="hide-for-tablet-and-desktop menu slide-out hide">
+    <div class="icon-close">
+      <img src="assets/icon-close.svg" alt="close icon">
+    </div>
+    <ul>
+      <li><a href="index.html">home</a></li>
+      <li><a href="about.html">about</a></li>
+    </ul>
+    <div class="menu-cta">
+      <button><a href="contact.html">contact us</a></button>
+    </div>
+    <img class="bg-pattern-about-1-mobile-nav-1" src="assets/bg-pattern-about-1-mobile-nav-1.svg" alt="" srcset="">
+  </div>
     <header>
     <nav>
       <ul>
@@ -31,8 +46,8 @@
         <li class="hide-for-mobile contact-us">
           <a href="contact.html"><button>contact us</button></a>
         </li>
-        <li class="hide-for-tablet-and-desktop icon-humberger">
-          <img src="assets/icon-hamburger.svg" alt="humberger icon">
+        <li class="hide-for-tablet-and-desktop icon-hamburger">
+          <img src="assets/icon-hamburger.svg" alt="hamburger icon">
         </li>
       </ul>
     </nav>
@@ -156,8 +171,8 @@
     <div class="footer__container">
       <img src="assets/logo.svg" alt="the site logo">
       <ul class="links">
-        <li class="link">home</li>
-        <li class="link">about</li>
+        <li class="link"><a href="index.html">home</a></li>
+        <li class="link"><a href="about.html">about</a></li>
       </ul>
       <address>
         <p>987 Hillcrest Lane</p>
@@ -220,6 +235,8 @@
       <p class="copyright">Copyright 2020. All Rights Reserved</p>
     </div>
   </footer> -->
+
+  <script src="scripts/scirpt.js"></script>
 </body>
 
 </html>
