--- a/about.html
+++ b/about.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- <base href="http://127.0.0.1:5500/docs/"> --> <!-- For DEV -->
-  <base href="https://wallas938.github.io/myteam-multi-page-website/docs/">
+  <base href="http://127.0.0.1:5500/docs/"> <!-- For DEV -->
+  <!-- <base href="https://wallas938.github.io/myteam-multi-page-website/docs/"> -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Livvic:wght@500;600;700&display=swap" rel="stylesheet">
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="css/get-started.css">
   <link rel="stylesheet" href="css/footer.css">
   <link rel="stylesheet" href="css/styles.css">
-  <!-- <script src="scripts/scirpt.js" defer></script> -->
+  <script src="scripts/scirpt.js" defer></script>
   <title>Frontend Mentor | myteam website challenge - About</title>
 </head>
 
